--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ awscli==1.38.22
 awsebcli==3.21.0
 blessed==1.20.0
 boto3==1.37.22
-botocore==1.37.22
+botocore
 cement==2.10.14
 certifi==2025.1.31
 charset-normalizer==3.4.1
