--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 asgiref==3.8.1
-awscli
-awsebcli
+awscli==1.38.22
+awsebcli==3.21.0
 blessed==1.20.0
 boto3==1.37.22
-botocore
+botocore==1.37.22
 cement==2.10.14
 certifi==2025.1.31
 charset-normalizer==3.4.1
